tests/snapshots/examples_fixtures/type_classes__MultiEffectTracerExample__App__SimpleTracer.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/MultiEffectTracerExample/App/SimpleTracer.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `MultiEffectTracerExample.App.SimpleTracer` doesn't match file path `examples/type_classes/MultiEffectTracerExample/App/SimpleTracer.flx`.

  examples/type_classes/MultiEffectTracerExample/App/SimpleTracer.flx:3:1
  |
3 | module MultiEffectTracerExample.App.SimpleTracer {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
